some spacing fix in home page main text body

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -337,7 +337,6 @@ header.default {
 
   @media screen and (max-width: $lg) {
     padding: 1rem 0;
-    margin-top: 0.5rem;
     margin-bottom: 1rem;
     font-size: 1rem;
     line-height: 150%;
@@ -345,7 +344,6 @@ header.default {
 
   @media screen and (max-width: $md) {
     padding: 0.5rem 0;
-    margin-top: 0;
     margin-bottom: 1rem;
     font-size: 0.9rem;
     line-height: 150%;
